# xfce4-panel-profiles

./: .gitignore  NEWS  README.md  pyproject.toml
extra/: libxfce4ui-2.xml
xfce4-panel-profiles/: info.py  panelconfig.py  xfce4-panel-profiles.glade  xfce4-panel-profiles.py
xfce4_panel_profiles_python/: __init__.py  app.py  lib.py
